--- a/src/app/components/forgot-password/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password/forgot-password.component.html
@@ -14,6 +14,7 @@
         <input class="break" type="email" formControlName="emailf" nbInput fullWidth status="primary" placeholder="Email">
         <div class="emptyi" *ngIf="profileFormF.get('emailf')?.hasError('required') && showErrorF">Pole musi być wypełnione</div>
         <div class="emptyi" *ngIf="profileFormF.get('emailf')?.hasError('email') && showErrorF">Nieprawidłowy adress email</div>
+        <div class="emptyi" *ngIf="customError">{{customError}}</div>
         <div id="bLogin"><button nbButton status="primary">Wyślij</button></div>
         </form>
     </nb-card-body>
