--- a/src/app/pages/login-page/pages/user-login-page/user-login-page.component.html
+++ b/src/app/pages/login-page/pages/user-login-page/user-login-page.component.html
@@ -1,3 +1,4 @@
 <div class="row">
-    <app-login [loading]="loading" [customError]="customError" (loginClick)="getData($event)" class="col-12 offset-sm-3 col-sm-6 offset-md-2 col-md-8 col-xl-4 offset-xl-4"></app-login>
+    <app-login [loading]="loading" [customError]="customError" (loginClick)="getData($event)"
+        class="col-12 offset-sm-3 col-sm-6 offset-md-2 col-md-8 col-xl-4 offset-xl-4"></app-login>
 </div>
