--- a/src/app/components/forgot-password/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password/forgot-password.component.html
@@ -6,7 +6,7 @@
         <span>Reset hasła</span>
     </nb-card-header>
     <!-- <nb-icon id="back" icon="arrow-back-outline"></nb-icon> -->
-    <nb-card-body>
+    <nb-card-body [nbSpinner]="loading" nbSpinnerStatus="primary" nbSpinnerSize="giant">
         <p>Podaj adres email na którym konto zostało zarejestrowane. Na tę skrzynkę pocztową zostanie wysłana wiadomość
             z możliwością resetowania hasła</p>
         <form [formGroup]="profileFormF" (ngSubmit)="onSubmitf()">
