--- a/src/app/pages/home-page/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page/home-page.component.html
@@ -1,7 +1,8 @@
 <nb-layout>
-    <nb-layout-header>
+    
+    <nb-layout-header fixed>
         <div id="menuUpLeft">
-            <nb-icon icon="menu-outline"></nb-icon>
+            <button id="menuB" nbButton status="basic" (click)="showMenu()" ><nb-icon icon="menu-outline" ></nb-icon></button>
             Menu
         </div>
         <div id="menuUpRight">
@@ -10,6 +11,7 @@
         </div>
     </nb-layout-header>
 
+    <nb-sidebar tag="navi"></nb-sidebar>
     <nb-layout-column>
         <router-outlet></router-outlet>
     </nb-layout-column>
