--- a/src/app/pages/home-page/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page/home-page.component.html
@@ -8,7 +8,7 @@
             Menu
         </div>
         <div id="menuUpRight">
-            <nb-user size="large" name="John Doe" title="Engineer" color="#cccccc" [nbContextMenu]="items">
+            <nb-user size="large" [name]="getUserName()" title="Engineer" color="#cccccc" [nbContextMenu]="items">
             </nb-user>
         </div>
     </nb-layout-header>
