tworzenie tabeli w list
tworzenie tabeli w list

--- a/src/app/pages/home-page/pages/admin-page/admin-page/pages/admin-list-page/pages/admin-list-edit-page/admin-list-edit-page/admin-list-edit-page.component.html
+++ b/src/app/pages/home-page/pages/admin-page/admin-page/pages/admin-list-page/pages/admin-list-edit-page/admin-list-edit-page/admin-list-edit-page.component.html
@@ -1,1 +1,5 @@
 <p>admin-list-edit-page works!</p>
+<!-- serwis do odbierania danych o urzytkownikac (rest)
+ Wyświetlajae okienko
+    * wysylanie emaila na zmiane hasła
+    * Dezaktywacja konta -->
