--- a/src/app/components/admin-list/admin-list/admin-list.component.html
+++ b/src/app/components/admin-list/admin-list/admin-list.component.html
@@ -43,5 +43,29 @@
             </tbody>
           </table>
 
+
+          <table class="table">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Imie</th>
+                <th scope="col">Nazwisko</th>
+                <th scope="col">Email</th>
+                <th scope="col">Stanowsko</th>
+                <th scope="col">Typ użytkownika</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- <tr *ngFor="let item of data"> -->
+              <tr>
+                <th scope="row">1</th>
+                <td>{{id}}</td>
+                <td>Nazwisko</td>
+                <td>Email</td>
+                <td>Stanowsko</td>
+                <td>Typ użytkownika</td>
+              </tr>
+            </tbody>
+          </table>
     </nb-card-body>
 </nb-card>
