cw (dodaj loadinga)
cw

--- a/src/app/pages/home-page/pages/admin-page/admin-page/pages/admin-add-page/admin-add-page/admin-add-page.component.html
+++ b/src/app/pages/home-page/pages/admin-page/admin-page/pages/admin-add-page/admin-add-page/admin-add-page.component.html
@@ -1,5 +1,5 @@
 <div class="row">
     <!-- <app-admin-add (newUser)="getData($event)" -->
-    <app-admin-add (newUser)="getData($event)"
+    <app-admin-add [loading]="loading"(newUser)="getData($event)"
     class="col-12 offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-2 col-lg-8 offset-xl-2 col-xl-8 "></app-admin-add>
 </div>
