--- a/src/app/pages/login-page/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page/login-page.component.html
@@ -1,9 +1,9 @@
 <nb-layout>
-    <nb-layout-header>PHUP Zaproszenie</nb-layout-header>
+    <nb-layout-header>TEST Dashboard </nb-layout-header>
   
     <nb-layout-column>
         <router-outlet></router-outlet>
     </nb-layout-column>
   
-    <nb-layout-footer>DAW-Systems@2022</nb-layout-footer>
+    <nb-layout-footer>Mariusz-Lemanski@2022</nb-layout-footer>
 </nb-layout>
