--- a/src/app/pages/home-page/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page/home-page.component.html
@@ -21,5 +21,5 @@
         <router-outlet></router-outlet>
     </nb-layout-column>
 
-    <nb-layout-footer>DAW-Systems@2022</nb-layout-footer>
+    <nb-layout-footer>Mariusz-Lemanski@2022</nb-layout-footer>
 </nb-layout>
